fix: 1. 修復 logo 圖沒出現問題 2. 調整 banner 按鈕與 navbar 的 z-index 3. 修復 scss 檔案

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -22,15 +22,7 @@
   height: 35px;
   -webkit-appearance: none;
 }
-.main-area form input:-ms-input-placeholder,
-.main-area form select:-ms-input-placeholder,
-.main-area form textarea:-ms-input-placeholder {
-  color: #fff;
-}
 .main-area form input::-moz-placeholder, .main-area form select::-moz-placeholder, .main-area form textarea::-moz-placeholder {
-  color: #fff;
-}
-.main-area form input:-ms-input-placeholder, .main-area form select:-ms-input-placeholder, .main-area form textarea:-ms-input-placeholder {
   color: #fff;
 }
 .main-area form input::placeholder,
