--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,5 +1,6 @@
 body {
   line-height: 1.5;
+  font-family: "微軟正黑體";
 }
 
 a {
